# pygro

./: .buildinfo  .gitignore  CHANGES.txt  CoordinatesTest.ipynb  LICENSE.txt  README.md  Untitled.ipynb  create_metric.html  define_observer.html  genindex.html  geodesic.html  geodesicengine.html  getting_started.html  index.html  integrate_geodesic.html  integrating_orbits.html  integrators.html  metricengine.html  objects.inv  observer.html  orbit.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  spinner_test.py  test.metric  test.py  test_integrator.py  test_pyfunc.metric  visualize.html  yukawa.json
.github/workflows/: documentation.yml  release.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
_modules/: index.html
_modules/pygro/: geodesic.html  geodesic_engine.html  integrators.html  metric_engine.html  observer.html  orbit.html
_sources/: getting_started.rst.txt  integrators.rst.txt  observer.rst.txt  orbit.rst.txt
docs/: requirements.txt
examples/: Kerr-Photons.html  Kerr-Photons.ipynb  S2_MCMC.html  Schwarzschild-ISCO.html  Schwarzschild-ISCO.ipynb  Schwarzschild-PhotonOrbit.html  Schwarzschild-PhotonOrbit.ipynb  Schwarzschild-Precession.html  Schwarzschild-Precession.ipynb  Wormhole.html  Wormhole.ipynb
geodesics/: null_geodesic.html  timelike_geodesic.html
pigro/: __init__.py  geodesic.py  geodesic_engine.py  integrators.py  metric_engine.py
pygro/: __init__.py  coordinates.py  geodesic.py  geodesic_engine.py  integrators.py  metric_engine.py  observer.py  orbit.py
tests/: metric_engine_test.py
(+40 files in other folders)
